# Magma

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
source/: magma.cpp  magma.hpp
